# python-project-83

./: .gitignore  Makefile  README.md  database.sql  pyproject.toml
.github/workflows/: pyci.yml
hexlet-code/: Makefile
hexlet-code/page_analyzer/: __init__.py
page_analyzer/: __init__.py  app.py  database.py  html.py  url_analysis.py  urls.py  validator.py
page_analyzer/templates/: 404.html  base.html  flash_messages.html  index.html
page_analyzer/templates/urls/: index.html  url_info.html
tests/: app_test.py
